--- a/jmeterrun.yml
+++ b/jmeterrun.yml
@@ -1,9 +1,3 @@
-trigger:
-- none
-
-variables:
-  - group: JMeter_scripts
-
 stages:
   - stage: RunJMeter
     displayName: 'Run JMeter Tests'
@@ -11,7 +5,7 @@ stages:
       - job: RunTests
         displayName: 'Run JMeter Test Plans'
         pool:
-          vmImage: 'ubuntu-latest'
+          name: Default   # Use your self-hosted agent pool
         steps:
           # Step 1: Install JMeter
           - task: Bash@3
