--- a/jmeterrun.yml
+++ b/jmeterrun.yml
@@ -35,6 +35,10 @@ stages:
                 echo "JMeter installed successfully."
                 jmeter -v
 
+                # Verify JMeter Installation
+                echo "JMeter installed successfully, version:"
+                jmeter -v || { echo "JMeter command not found!"; exit 1; }
+
           # Step 2: Run all JMeter test plans (.jmx files)
           - task: Bash@3
             displayName: 'Run JMeter Test Plans'
